// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cat - multiple files - prints to stdout 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "hello, world!!! :D
あtrailing newline incoming
",
}
`;

exports[`cat - multiple files - returns string 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "hello, world!!! :D
あtrailing newline incoming

",
  "stdout": "hello, world!!! :D
あtrailing newline incoming
",
}
`;

exports[`cat - single file - prints to stdout 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "",
  "stdout": "hello, world!!! :D
あ",
}
`;

exports[`cat - single file - returns string 1`] = `
Object {
  "code": 0,
  "error": false,
  "stderr": "hello, world!!! :D
あ
",
  "stdout": "hello, world!!! :D
あ",
}
`;
